# dotfiles

./: .bashrc  .git_commit_template.txt  .gitconfig  .gitignore  .gitignore_global  .gitmodules  .spacemacs  .sqliterc  .tigrc  .tmux.conf  .tmux.conf.osx  .travis.yml  .vimrc  .zlogout  .zprofile  .zshenv  .zshrc  .zshrc_ubuntu1310  Brewfile  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  atom-packages.txt  generate_tmux_config_for_osx.sh  init.sh  install.py  pyproject.toml  setup.sh  terminator_config  tmux.conf  zimrc  zshrc
.atom/: .gitignore  config.cson  keymap.cson
.circleci/: config.yml
.claude/: settings.json  settings.local.json
.claude/hooks/: python-post-edit.sh
.github/: dependabot.yml
.github/instructions/: .instructions.md
.github/workflows/: test.yml
.tmux/: .tmux.conf.osx
.tmux/tmux-powerline/config/: defaults.sh
.tmux/tmux-powerline/themes/: mytheme.sh
claude/: CLAUDE.md  settings.json  statusline-command.sh  statusline.sh
conf/: terminator_config  xorg.conf
init/: README.md  init_tmux.sh  init_zsh.sh  install_pip.sh
karabiner/: .gitignore  README.md  karabiner.json
mac/: .tmux.conf  .zshrc
tests/: conftest.py  test_install.py
tmux/: .tmux.conf
tmux/tmux-powerline/themes/: mytheme.sh
ubuntu/: .zshrc
vim.d/: dein.toml  dein_lazy.toml
vscode/: README.md  extentions.txt  settings.json
zsh.d/: _openssl  alias.zsh  command.zsh  completion.zsh  config.zsh  os.zsh  run.zsh  themes.zsh  zim.zsh  zplug.zsh  zplug_conf.zsh
